--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -92,13 +92,13 @@ svg.material-icons:not(:last-child) {
   border: 1px solid #eee;
   background-color: #fafafa;
   min-height: 40px;
-  min-width: 200px;
+  width: 400px;
   margin: 0 8px 16px;
   padding: 16px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  /*justify-content: center;*/
+  /*align-items: center;*/
   transition: all 0.2s ease-in-out;
   line-height: 24px;
 }
